--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
           <div class="col-md-6 ml-auto align-self-center">
             <div class="intro">
               <div class="heading">
-                <h1>TK Solutions</h1>
+                <h1>#1 Design Patner.</h1>
               </div>
               <div class="text">
-                <p class="sub-text mb-5">Insert description here.</p>
-                <p><a href="#" target="_blank" class="btn btn-outline-primary btn-md">Start a project</a></p>
+                <p class="sub-text mb-5">We're a Tech-based company in Nairobi designing great brands & websites. We give businesses & institutions a digital prescence to crave for.</p>
+                <p><a href="#" target="_blank" class="btn btn-outline-primary btn-md">Start a project with us</a></p>
               </div>
             </div>
           </div>
@@ -179,7 +179,7 @@
           <div class="col-lg-5 ml-auto section-title">
             <span class="sub-title mb-2 d-block">About Us</span>
             <h2 class="title text-primary mb-3">About us</h2>
-            <p class="mb-4">Insert an explanatory and comprehensive  paragraph. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <p class="mb-4">We're a Tech-based company in Nairobi designing great brands & websites. We give businesses & institutions a digital prescence to crave for.</p>
 
 
             <div class="d-flex">
@@ -733,7 +733,7 @@
                   <input type="text" class="form-control border-white text-white bg-transparent" placeholder="Enter email" aria-label="Enter Email" aria-describedby="button-addon2">
                 </div>
                 <div class="form-group">
-                  <button class="btn btn-primary px-5" type="submit">Subscribe</button>
+       ,           <button class="btn btn-primary px-5" type="submit">Subscribe</button>
                 </div>
               </form>
 
