--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tk Solutions &mdash; By Osumba</title>
+    <title>Trendy Kenya Solutions &mdash; By Osumba</title>
     <link rel="icon" href="images/t k.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -52,7 +52,7 @@
           
           <div class="row align-items-center">
             <div class="col-6 col-md-4">
-              <h1 class="my-0 site-logo"><a href="index.html">Trendy Kenya Solutions<span class="text-primary">.</span> </a></h1>
+              <h1 class="my-0 site-logo"><a href="index.html">TK Solutions<span class="text-primary">.</span> </a></h1>
             </div>
 
             <div class="col-6 col-md-8">
