--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <span class="sub-title mb-2 d-block">About Us</span>
             <h2 class="title text-primary mb-3">About us</h2>
             <p class="mb-4"> We are a group of young talented and tech-savvy individuals with a passion to create digital spaces where companies and businesses can thrive. We take pride in designing Exceptional brands & websites.
-              
+            Here's the TK development process
             </p>
          
             <div class="d-flex">
