--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>TK Solutions &mdash; By Osumba</title>
+    <title>Trendy Kenya Solutions</title>
     <link rel="icon" href="images/t k (1).png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -677,7 +677,7 @@
                 </div>
             <p>
               
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Designed  <i class="" aria-hidden="true"></i> by Austine Osumba</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Trendy Kenya  <i class="" aria-hidden="true"></i> Solutions</a>
             
             </p>
           </div>
